--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "lint": "eslint ./",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "test":"./node_modules/mocha/bin/mocha -r mock-local-storage --compilers js:babel-core/register test/index.js "
+    "test": "./node_modules/mocha/bin/mocha -r mock-local-storage --compilers js:babel-core/register test/index.js "
   },
   "author": "Douglas von Kohorn",
   "license": "MIT",
   "devDependencies": {
+
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^6.1.2",
@@ -18,6 +19,8 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
@@ -34,5 +37,47 @@
     "web3": "^0.18.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
-  }
+  },
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-cli": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "babel-eslint": "^6.1.2",
+    "chart.js": "^2.5.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.4",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "eslint-plugin-mocha": "^4.9.0",
+    "ethereumjs-util": "^5.1.1",
+    "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
+    "json-loader": "^0.5.4",
+    "mock-local-storage": "^1.0.2",
+    "style-loader": "^0.13.2",
+    "truffle-contract": "^1.1.11",
+    "web3": "^0.18.4",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
+    "web3-provider-engine": "^12.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Neufund/ICOMonitor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Neufund/ICOMonitor/issues"
+  },
+  "homepage": "https://github.com/Neufund/ICOMonitor#readme"
 }
